objects/ASI_MFM_Payment_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_A_C_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>A/C Code</label>
        <referenceTo>ASI_MFM_A_C_Code__c</referenceTo>
        <relationshipLabel>Payment Details</relationshipLabel>
        <relationshipName>Expense_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_ETL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accrual ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Reverse_Amount_ETL__c</fullName>
        <label>Accrual Reverse Amount ETL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Reverse_Amount__c</fullName>
        <label>Accrual Reverse Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Accrual_Reverse_Budget__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accrual Reverse Budget</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount_ETL__c</fullName>
        <label>Amount ETL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Amount_in_Base_Currency__c</fullName>
        <formula>ASI_MFM_Amount__c *  ASI_MFM_Payment__r.ASI_MFM_Exchange_Rate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount in Base Currency</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Document_Number__c</fullName>
        <label>Document Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Document_Type__c</fullName>
        <label>Document Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_ETL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Employee_Allocated_Amount_ETL__c</fullName>
        <label>Employee Allocated Amount ETL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Employee_Allocated_Amount__c</fullName>
        <label>Employee Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Employee_Allocated_Percent__c</fullName>
        <label>Employee Allocated Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Employee_Code__c</fullName>
        <label>Employee Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Expense_Type_ID__c</fullName>
        <formula>ASI_MFM_Payment__r.ASI_MFM_Expense_Type__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expense Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Fiscal_Year__c</fullName>
        <label>Fiscal Year</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_GL_date__c</fullName>
        <label>GL date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Headcount__c</fullName>
        <label>Headcount</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Non_Sales_Allocated_Amount_ETL__c</fullName>
        <label>Non-Sales Allocated Amount ETL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Non_Sales_Allocated_Amount__c</fullName>
        <label>Non-Sales Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Non_Sales_Allocated_Percent__c</fullName>
        <label>Non-Sales Allocated Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Non_VAT_Amount_RMB__c</fullName>
        <label>Non-VAT Amount(RMB)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>ASI_MFM_Payment__c</referenceTo>
        <relationshipLabel>Payment Details</relationshipLabel>
        <relationshipName>Payment_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Purpose__c</fullName>
        <label>Purpose</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reclassification__c</fullName>
        <label>Reclassification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Remark__c</fullName>
        <label>Remark</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Reverse_ETL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reverse ETL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sales_Allocated_Amount_ETL__c</fullName>
        <label>Sales Allocated Amount ETL</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sales_Allocated_Amount__c</fullName>
        <label>Sales Allocated Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sales_Allocated_Percent__c</fullName>
        <label>Sales Allocated Percent</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Subledger__c</fullName>
        <label>Subledger</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Payment Detail</label>
    <listViews>
        <fullName>All_JDE_adjustment</fullName>
        <columns>NAME</columns>
        <columns>ASI_MFM_Document_Number__c</columns>
        <columns>ASI_MFM_Document_Type__c</columns>
        <columns>ASI_MFM_Amount__c</columns>
        <columns>ASI_MFM_Payment__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ASI_MFM_Subledger__c</columns>
        <columns>ASI_MFM_Remark__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_MFM_Payment_Detail__c.ASI_MFM_CAP_CN_Expense_Adjustment</value>
        </filters>
        <label>All JDE adjustment</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PD-{YY}-{00000000}</displayFormat>
        <label>Payment Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Details</pluralLabel>
    <recordTypes>
        <fullName>ASI_MFM_CAP_CN_Accrual_Detail</fullName>
        <active>true</active>
        <description>For CN Structure Cost Accrual Form use</description>
        <label>CN Accrual Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_CN_Expense_Adjustment</fullName>
        <active>true</active>
        <description>For CN Structure Cost Payment Adjustment from JDE</description>
        <label>CN Expense Adjustment</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_CN_Payment_Allocation</fullName>
        <active>true</active>
        <description>For CN Structure Cost Payment Allocation</description>
        <label>CN Payment Allocation</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CAP_CN_Payment_Detail</fullName>
        <active>true</active>
        <description>For CN Structure Cost Prepayment Line</description>
        <label>CN Payment Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_MFM_CN_Classification_Line</fullName>
        <active>true</active>
        <description>For CN Structure Cost Payment Reclassification use</description>
        <label>CN Classification Line</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>